# terratheme

./: .gitignore  SPEC.md  TERRA_ROADMAP.md  pyproject.toml
src/terratheme/: __main__.py  cli.py  config.py  set_wallpaper.py  terminal_push.py  visualize.py
src/terratheme/palette/: color_utils.py  derive.py  extract.py  syntax_palette.py  syntax_utils.py
src/terratheme/targets/: __init__.py  base.py  foot.py  gtk.py  hyprland.py  lf.py  nvim.py  qt.py  zellij.py
tests/: test_derive.py  test_nvim.py
